# lineageos_updates_bot

./: .gitignore  README.md  example_config.py  lineageos_updates_bot.service  pyproject.toml
lineageos_updates_bot/: __init__.py  __main__.py  main.py
lineageos_updates_bot/utils/: bot.py  error_handler.py  logging.py  observer.py  poster.py
